src/objects/Perio_Chart_Tooth__c.object
<CustomObject>
    <fields>
        <fullName>Decay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Endo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Endo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Measurement__c</fullName>
        <label>Measurement</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perio_Chart__c</fullName>
        <label>Perio Chart</label>
        <referenceTo>Perio_Chart__c</referenceTo>
        <relationshipLabel>Perio Chart Teeth</relationshipLabel>
        <relationshipName>Perio_Chart_Teeth</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tooth_Integer__c</fullName>
        <formula>VALUE(Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tooth Integer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tooth_Type__c</fullName>
        <label>Tooth Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Natural</fullName>
                    <default>true</default>
                    <label>Natural</label>
                </value>
                <value>
                    <fullName>Implant</fullName>
                </value>
                <value>
                    <fullName>Missing</fullName>
                </value>
                <value>
                    <fullName>Pontic</fullName>
                </value>
                <value>
                    <fullName>Crown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Perio Chart Tooth</label>
    <nameField>
        <label>Perio Chart Tooth Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Perio Chart Teeth</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>